examples/test/testpolicy5892.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5892
  namespace: namespace140
spec:
  podSelector:
    matchLabels:
      key32: value27
      key41: value8
      key44: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value3
      podSelector:
        matchLabels:
          key20: value18
          key4: value36
          key44: value26
